objects/Case_Blackout_Days__c.object
<CustomObject>
    <description>For Expert Center case deadlines.</description>
    <fields>
        <fullName>Blackout_Begin_Date__c</fullName>
        <label>Blackout Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Blackout_End_Date__c</fullName>
        <inlineHelpText>Last Day of the blackout period. If a one day event, enter the same date for Begin and End.</inlineHelpText>
        <label>Blackout End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>US Company Holiday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-day</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case_Blackout_Dates</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Case Blackout Date</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Blackout_Begin_Date__c</columns>
        <columns>Blackout_End_Date__c</columns>
        <columns>Type__c</columns>
        <columns>User__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Blackout_Begin_Date__c</columns>
        <columns>Blackout_End_Date__c</columns>
        <columns>Type__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Case Blackout Days Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Blackout Dates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>User_required_for_Vacation_days</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 ISPICKVAL( Type__c , &quot;Vacation&quot;),
 ISBLANK( User__c )  
)</errorConditionFormula>
        <errorMessage>Please enter the name of the user who will be on Vacation during this time period.</errorMessage>
    </validationRules>
</CustomObject>